<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="undefined_value">N/A</string>
    <string name="bid_and_ask_separator">/</string>
    <string name="instrument_title">Instrument</string>
    <string name="bid_and_ask_title">BID / ASK</string>
    <string name="spread_title">SPREAD</string>
    <string name="connecting_status">Connecting…</string>
    <string name="connected_status">connection established</string>
    <string name="empty_quotes_message">Select instruments in the settings</string>
</resources>