<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/status_text_view"
        style="@style/AppTextView.16.OneLine.Center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/connecting_status"
        tools:layout_height="@dimen/status_text_view_height" />

    <TextView
        android:id="@+id/empty_message_text_view"
        style="@style/AppTextView.24.Bold.Center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_16"
        android:text="@string/empty_quotes_message"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingStart="@dimen/padding_16"
        android:paddingEnd="@dimen/padding_16">

        <TextView
            android:id="@+id/instrument_title_text_view"
            style="@style/AppTextView.16.Bold.OneLine.Center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/instrument_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/bid_and_ask_title_text_view"
            style="@style/AppTextView.16.Bold.OneLine.Center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bid_and_ask_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/spread_title_text_view"
            style="@style/AppTextView.16.Bold.OneLine.Center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/spread_title"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quotes_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/layout_quote_item" />

</LinearLayout>